# LuaJit2vm

./: .gitignore  3.GetDllFunction.cmd  CMakeLists.txt  README.md  废弃的CMakeLists.txt
CppInvokeLua/scr/: CppInvokeLua.cpp
CppPinvokeUnityProject/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  uProject.sln
CppPinvokeUnityProject/Assets/18.CppPInvoke/: CppPInvoke1.unity  DllManager.unity
CppPinvokeUnityProject/Assets/18.CppPInvoke/1.BaseType/: Array_Pinvoke.cs  BaseType_Pinvoke.cs  Struct_Pinvoke.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/2.String/: CppStringClass.cs  MarshalString.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/4.CppCallUnity/: PInvokeDelegate.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/5.Class/: ClassWrap.cs  CppGC.cs  ManagedClassBlittable.cs  ObjectStore.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/5.Marshal/: MarshalClass.cs  MarshalCollection.cs  MarshalEvent.cs  MarshalStruct.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/6.SafeHandle/: MarshalFullExample_NameFinderWrapper.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/ExceptionCSharpClient/: ExceptionPInvoke.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/Struct/: MarshalStruct_Argument.cs  MarshalStruct_ExactLayout.cs  MarshalStruct_StructInStruct.cs
CppPinvokeUnityProject/Assets/18.CppPInvoke/UnityObject/: RenderLoop.cs
CppPinvokeUnityProject/Assets/NativeDLLManager/: DLLManager.cs
CppPinvokeUnityProject/Assets/RenderPlugin/: UseRenderingPlugin.cs
CppPinvokeUnityProject/Assets/fts_native_plugin_reloader/Scripts/: NativePluginLoader.cs
CppPinvokeUnityProject/Assets/patircs/Materials/: Particle.mat
CppPinvokeUnityProject/Assets/patircs/Scripts/: UnityNativeParticles.cs
CppPinvokeUnityProject/UserSettings/: EditorUserSettings.asset
CppPinvokeUnityProject/UserSettings/Layouts/: default-2022.dwlt
LuaLib/: 1.cmakeDo.cmd  3.GetDllFunction.cmd  CMakeLists.txt  LuaLib.sln  LuaLib.vcxproj  LuaLib.vcxproj.filters
LuaLib/CppInvokeLua/: luafile.lua
LuaLib/luaScript/: heello.lua
LuaLib/src/: lapi.c  lauxlib.c  lauxlib.h  lua.h  luaconf.h
LuaLib/wrapper/: LuaWrapper.c  LuaWrapper.h
LuavmDll/CppInvokeLua/: CppInvokeLua.sln  CppInvokeLua.vcxproj  CppInvokeLua.vcxproj.filters
LuavmDll/CppInvokeLua/x64/Debug/: CppInvokeLua.exe.recipe  CppInvokeLua.ilk  CppInvokeLua.vcxproj.FileListAbsolute.txt  vc143.idb
LuavmUnityProject/: LuavmUnityProject.sln  README.md
LuavmUnityProject/Assets/LuaVM/Core/: LuaVMState.cs
LuavmUnityProject/Assets/LuaVM/LuavmInterface/: LuaVMAPI.cs  LuaVMAPI_Extern.cs  LuaVMAPI_Lib.cs
LuavmUnityProject/Assets/NativeDLLManager/: DllLoader.cs  DllManager.cs  NativePluginLoader.cs
LuavmUnityProject/Assets/PInvokeTutorial/1.BaseType/: Array_Pinvoke.cs  BaseType_Pinvoke.cs  PinvokeTest.cs  Struct_Pinvoke.cs
LuavmUnityProject/Assets/PInvokeTutorial/2.String/: CppStringClass.cs  MarshalString.cs
LuavmUnityProject/Assets/PInvokeTutorial/4.CppCallUnity/: PInvokeDelegate.cs
LuavmUnityProject/Assets/PInvokeTutorial/5.Class/: ClassWrap.cs  GameObjectCpp.cs
LuavmUnityProject/Assets/PInvokeTutorial/5.Marshal/: MarshalArray.cs  MarshalCommonType.cs  MarshalDirection.cs  MarshalOptional.cs  MarshalString.cs  MarshalVariant.cs
LuavmUnityProject/Assets/PInvokeTutorial/6.SafeHandle/: MarshalFullExample_NameFinderWrapper.cs  SafeNativeHandle.cs
LuavmUnityProject/Assets/PInvokeTutorial/7.DynamicLoad/: ExampleCAPI.cs  fts_native_plugin_reloader.unity
LuavmUnityProject/Assets/PInvokeTutorial/ExceptionCSharpClient/: ExceptionPInvoke.cs  Program.cs
LuavmUnityProject/Assets/PInvokeTutorial/Struct/: MarshalStruct_Argument.cs  (+4 more)
LuavmUnityProject/Assets/RenderPlugin/: UseRenderingPlugin.cs
LuavmUnityProject/ProjectSettings/: ProjectSettings.asset
LuavmUnityProject/UserSettings/: EditorUserSettings.asset
LuavmUnityProject/UserSettings/Layouts/: default-6000.dwlt
Tools/.NET Reflector/: 下载地址.txt
Tools/A Win32 Library for .NET/: 下载地址.txt
Tools/A Win32 Library for .NET/Win32/: User.cs
Tools/DotNET Compact Framework PInvoke Samples/: 下载地址.txt
Tools/Dumpbin/: dumpbin___工具介绍.txt  工具软件位置.txt
Tools/MSIL反汇编程序/: MSIL反汇编程序___工具介绍.txt  工具软件位置.txt
Tools/MSIL汇编程序/: MSIL汇编程序___工具介绍.txt  工具软件位置.txt
Tools/Managed WinAPI/: 来源.txt
Tools/Oleview/: Oleview___工具介绍.txt  工具软件位置.txt
Tools/PInvoke Interop Assistant/: Microsoft Limited Public License.txt  下载地址.txt
Tools/PInvoke.net Add-in/: 下载地址.txt
Tools/Regasm/: Regasm___工具介绍.txt  工具软件位置.txt
Tools/Regedit/: Regedit___工具介绍.txt  工具软件位置.txt
Tools/Type Library Exporter/: Tlbexp___工具介绍.txt  工具软件位置.txt
Tools/Type Library Importer in Managed Code/: Tlbimp___工具介绍.txt  下载地址.txt  工具软件位置.txt
Tools/Uuidgen/: Uuidgen___工具介绍.txt  工具软件位置.txt
Tools/Windows Message ID constants/: license.txt  下载地址.txt
Tools/全局程序集缓存工具/: 全局程序集缓存工具___工具介绍.txt  工具软件位置.txt
monoWrap/: CMakeLists.txt  cmakeDo.cmd
monoWrap/scr/: CppMono.cpp  Test.cpp  Wrapper.def  main.h
tolua-master/: lua.dll.c
tolua-master/LuaSourceCodeDir/src/: int64.c  loadlib.c  luaconf.h
tolua-master/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
tolua-master/UserSettings/: EditorUserSettings.asset
tolua-master/UserSettings/Layouts/: default-2023.dwlt
unityNativePlugin/: 2.GeacreateDLL.cmd  CMakeLists.txt  unity_native_particles.cpp
unityNativePlugin/src/: 文件结构.txt
unityNativePlugin/src/AsyncGPUReadbackPlugin/: AsyncGPUReadbackPlugin.cpp
unityNativePlugin/src/cpp_example_dll/: ArrayTypeWrap.cpp  BaseTypeWrap.cpp  CustomString.cpp  CustomString.h  NativeLib.cpp  NativeLib.h  PostionCpp.cpp  WraperToUnity.h
unityNativePlugin/src/openglEx/: globals.h  renderer_opengl.cpp  renderer_opengl.h  shader.h
unityNativePlugin/src/particles/: unity_native_particles.cpp
unityNativePlugin/src/rhi/RenderAPI/: RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp
unityNativePlugin/src/rhi/Unity/: IUnityGraphicsD3D12.h  IUnityProfiler.h  IUnityShaderCompilerAccess.h
(+179 files in other folders)
